@@ -7,6 +7,8 @@
                                   Changelog
 
 Daniel Stenberg (24 Apr 2009)
+- Kamil Dudka fixed another NSS-related leak when client certs were used.
+
 - bug report #2779245 (http://curl.haxx.se/bug/view.cgi?id=2779245) by Rainer
   Koenig pointed out that the man page didn't tell that the *_proxy
   environment variables can be specified lower case or UPPER CASE and the
